--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
+    "chartjs-plugin-labels": "^1.1.0",
     "cookie-session": "^2.0.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
